--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <h1>hellow world</h1>
-
+            <h2>lorem</h2>
         </header>
     </main>
 </body>
